--- a/Projeto Pagina de Captura/style/style.css
+++ b/Projeto Pagina de Captura/style/style.css
@@ -67,3 +67,31 @@ select{
     background-position-x: calc(100% - 10px);
     background-position-y: center;
 }
+
+footer{
+    background-color: #202121;
+    padding: 40px;
+    text-align: center;
+}
+
+.picture{
+    width: 160px;
+}
+
+.description{
+    display: inline-block;
+    text-align: left;
+    color: white;
+    max-width: 40%;
+    margin-left: 40px;
+}
+
+.description p , .description h3 {
+    margin-bottom: 20px;
+}
+
+@media (max-width: 600px) {
+    section{
+        background-image: none;
+    }
+}
